--- a/common/common.scss
+++ b/common/common.scss
@@ -6,6 +6,8 @@
   box-shadow: 0 1px $value rgba(black, 0.18);
 }
 
+--primary-medium; pink;
+
 .background-container {
   position: fixed;
   top: 0;
