--- a/common/common.scss
+++ b/common/common.scss
@@ -1,7 +1,7 @@
 // Big thanks to jsthon for the initial work on this https://meta.discourse.org/u/jsthon/
 
 :root {
-  --primary-medium: pink;
+  --primary-medium: #646464;
 }
 
 @import "common/foundation/variables";
