increased max width

--- a/common/common.scss
+++ b/common/common.scss
@@ -396,6 +396,6 @@ noscript > #main-outlet {
   padding-top: 6em;
 }
 
-td.num.likes .d-icon {
+td.num.likes .d-icon, td.num.posts .d-icon{
   padding-right: 0.3em; 
 }
