increased max width

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -125,6 +125,10 @@ nav.post-controls {
     background: $tertiary-low;
     color: $tertiary;
   }
+  
+  .posters {
+    width: inherit;
+  }
 }
 
 #topic-title h1 a {
