--- a/common/common.scss
+++ b/common/common.scss
@@ -372,6 +372,23 @@ span.user-title {
   color: var(--primary);
 }
 
+td.num.likes .d-icon, td.num.posts .d-icon{
+  padding-right: 0.3em; 
+  
+}
+
+td.num.likes .d-icon {
+  color: var(--love);
+}
+
+td.num.posts .d-icon {
+  color: var(--tertiary);
+}
+
+.poster-image {
+  display: inline-block;
+}
+
 // Plugins
 
 // Babble
@@ -394,17 +411,4 @@ span.user-title {
 .crawler > #main-outlet,
 noscript > #main-outlet {
   padding-top: 6em;
-}
-
-td.num.likes .d-icon, td.num.posts .d-icon{
-  padding-right: 0.3em; 
-  
-}
-
-td.num.likes .d-icon {
-  color: var(--love);
-}
-
-td.num.posts .d-icon {
-  color: var(--tertiary);
 }
