increased max width

--- a/common/common.scss
+++ b/common/common.scss
@@ -386,7 +386,11 @@ td.num.posts .d-icon {
 }
 
 .poster-image {
-  display: inline-block;
+  width: 33px;
+  
+  img {
+    width: 100%;
+  } 
 }
 
 // Plugins
