--- a/common/common.scss
+++ b/common/common.scss
@@ -391,11 +391,12 @@ td.num.posts .d-icon {
   
   img {
     width: 100%;
+    height: 100%;
   } 
 }
 
 .topic-details {
-  float: right;
+  float: left;
 }
 
 // Plugins
