increased max width

--- a/common/common.scss
+++ b/common/common.scss
@@ -401,6 +401,7 @@ td.num.posts .d-icon {
   float: left;
   display: inline-block;
   vertical-align: middle;
+  margin-left: 1rem;
 }
 
 // Plugins
