--- a/common/common.scss
+++ b/common/common.scss
@@ -390,6 +390,7 @@ td.num.posts .d-icon {
   width: 33px;
   display: inline-block;
   vertical-align: middle;
+  height: 100%;
   
   img {
     width: 100%;
