--- a/common/common.scss
+++ b/common/common.scss
@@ -394,8 +394,8 @@ td.num.posts .d-icon {
   align-self: center;
   
   img {
-    width: 100%;
-    height: 100%;
+    width: 33px;
+    height: 33px;
   } 
 }
 
