--- a/common/common.scss
+++ b/common/common.scss
@@ -416,6 +416,31 @@ td.num.posts .d-icon {
   }
 }
 
+.heatmap-high,
+.heatmap-high a,
+.heatmap-high .d-icon,
+.heatmap-high .d-button-label {
+  color: #fe7a15 !important;
+}
+
+.heatmap-med,
+.heatmap-med a,
+.heatmap-med .d-icon,
+.heatmap-med .d-button-label {
+  color: inherit;
+}
+
+.heatmap-low,
+.heatmap-low a,
+.heatmap-low .d-icon,
+.heatmap-low .d-button-label {
+  color: inherit;
+}
+
+.topic-list .heatmap-high {
+  font-weight: bold;
+}
+
 // Plugins
 
 // Babble
