--- a/common/common.scss
+++ b/common/common.scss
@@ -420,21 +420,21 @@ td.num.posts .d-icon {
 .heatmap-high a,
 .heatmap-high .d-icon,
 .heatmap-high .d-button-label {
-  color: var(--tertiary); !important
+  color: var(--tertiary) !important;
 }
 
 .heatmap-med,
 .heatmap-med a,
 .heatmap-med .d-icon,
 .heatmap-med .d-button-label {
-  color: var(--tertiary); !important
+  color: var(--tertiary) !important;
 }
 
 .heatmap-low,
 .heatmap-low a,
 .heatmap-low .d-icon,
 .heatmap-low .d-button-label {
-  color: var(--tertiary); !important
+  color: var(--tertiary) !important;
 }
 
 .topic-list .heatmap-high {
