increased max width

--- a/common/common.scss
+++ b/common/common.scss
@@ -420,6 +420,14 @@ td.num.posts .d-icon {
   font-weight: bold;
 }
 
+.category-drop-header {
+  border: 1px solid var(--gf-primary-low-or-low-mid);
+}
+
+.tag-drop-header {
+  border: 1px solid var(--gf-primary-low-or-low-mid);
+}
+
 // Plugins
 
 // Babble
