--- a/common/common.scss
+++ b/common/common.scss
@@ -412,7 +412,7 @@ td.num.posts .d-icon {
   font-weight: bold;
 }
 
-.select-kit.single-select.is-expanded .select-kit-header:not(.btn), .select-kit.single-select .select-kit-header:not(.btn):focus, .select-kit.single-select .select-kit-header:not(.btn):active {
+.select-kit.combo-box.category-drop .category-drop-header, .select-kit.combo-box.tag-drop .tag-drop-header {
   border-radius: none;
 }
 
