increased max width

--- a/common/common.scss
+++ b/common/common.scss
@@ -413,7 +413,7 @@ td.num.posts .d-icon {
 }
 
 .select-kit.combo-box.category-drop .category-drop-header, .select-kit.combo-box.tag-drop .tag-drop-header {
-  border-radius: none;
+  border-radius: 0;
 }
 
 // .category-drop-header {
