--- a/common/common.scss
+++ b/common/common.scss
@@ -416,6 +416,81 @@ td.num.posts .d-icon {
   border-radius: 0;
 }
 
+// Custom header
+.b-header {
+  width: 100%;
+  background-color: #2C3E50;
+  height: 4em;
+  margin-bottom: 0;
+}
+
+.b-header .title {
+  float: left;
+  margin-right: 24px;
+}
+
+.b-header .title a {
+  color: #fff;
+}
+
+.b-header #brand-logo {
+  height: 4em;
+}
+
+.b-header nav.links {
+  float: left;
+}
+
+.b-header .nav-pills {
+  margin-bottom: 0;
+}
+
+.nav-pills, .nav-stacked {
+  margin-left: 0;
+  list-style: none;
+}
+
+.b-header .panel {
+  float: left;
+  position: relative;
+}
+.b-header .panel>ul.icons {
+  float: left;
+}
+
+.b-header ul.icons {
+  text-align: center;
+  .b-header ul.icons>li {
+    float: left;
+    padding-right: 1rem;
+    list-style: none;
+  }
+}
+.b-header .panel>ul.icons a, .b-header .panel>ul.icons [class^="fa fa-"] {
+  color: #fff;
+}
+.b-header ul.icons a, .b-header ul.icons [class^="fa fa-"] {
+  font-size: 1.5em;
+  display: inline-block;
+  position: relative;
+  padding-top: 0.2em;
+  padding-right: 0.2em;
+  padding-bottom: 0.2em;
+  padding-left: 0.2em;
+  display: flex;
+  width: auto;
+  align-items: center;
+  justify-content: center;
+  height: 2.2857em;
+}
+
+.b-header ul.icons a .d-icon {
+  line-height: 1.4;
+  display: inline-block;
+  padding-right: 0.5rem;
+  width: 1.25em;
+}
+
 // Plugins
 
 // Babble
