increased max width

--- a/common/common.scss
+++ b/common/common.scss
@@ -433,6 +433,10 @@ td.num.posts .d-icon {
   color: #fff;
 }
 
+.b-header ul {
+  margin-bottom: 0px;
+}
+
 .b-header #brand-logo {
   height: 4em;
 }
