moving the club nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -427,7 +427,7 @@ header.d-header {
 }
 
 header.d-header .wrap {
-  width: 100%
+  width: 100%;
   max-width: 1200px;
   padding-right: 3em;
   padding-left: 3em;
