moving the club nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -426,6 +426,8 @@ header.d-header {
   background-color: transparent;
   box-shadow: none !important;
   max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header.d-header .wrap {
