moving the club nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -438,13 +438,13 @@ header.d-header .wrap {
 }
 
 @media screen and (max-width: 1120px) {
-    header.d-header .wrap {
+    header.d-header {
         width:80%
     }
 }
 
 @media screen and (max-width: 1075px) {
-    header.d-header .wrap {
+    header.d-header {
         width:85%
     }
 }
