moving the club nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -422,7 +422,7 @@ td.num.posts .d-icon {
   margin-bottom: 2rem;
 }
 
-div.d-header {
+div.d-header-wrap {
   background-color: transparent;
   box-shadow: none !important;
   max-width: 1200px;
