moving the club nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -439,13 +439,13 @@ header.d-header .wrap {
 
 @media screen and (max-width: 1120px) {
     .d-header-wrap {
-        width:80%
+        width:80%;
     }
 }
 
 @media screen and (max-width: 1075px) {
     .d-header-wrap {
-        width:85%
+        width:85%;
     }
 }
 
