adding icons to nav

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -205,8 +205,7 @@ div.cooked img:not(.thumbnail) {
 }
 .d-footer {
     background-color:#2C3E4F;
-    line-height: 64px;
-    height: 64px;
+    padding: 1rem;
     text-align:center;
 }
 .d-footer {
