adding icons to nav

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -223,9 +223,10 @@ div.cooked img:not(.thumbnail) {
 div#bottom-navbar-links {
     width:99%;
     margin: 0 auto;
-    padding-top:5px;
-    max-width:1100px;
-    text-align:center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    max-width: 1100px;
+    text-align: center;
 }
 div#bottom-navbar-links a {
     color:#FFFFFF;
