adding icons to nav

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -249,9 +249,8 @@ nav.post-controls {
 }
 #bottom-navbar-links {
     width:99%;
-    margin: 0 auto;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     max-width:1100px;
     text-align:center;
 }
