--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -249,8 +249,10 @@ nav.post-controls {
 }
 #bottom-navbar-links {
     width:99%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: : 1rem;
     max-width:1100px;
     text-align:center;
 }
