--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -252,7 +252,7 @@ nav.post-controls {
     margin-left: auto;
     margin-right: auto;
     margin-top: 1rem;
-    margin-bottom: : 1rem;
+    margin-bottom: 1rem;
     max-width:1100px;
     text-align:center;
 }
