--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -242,7 +242,6 @@ nav.post-controls {
 }
 /********** Nav Footer **********/
 #bottom-navbar {
-    height:44px;
     background-color:#4BB234;
     width:100%;
     z-index: 1001;
@@ -253,6 +252,8 @@ nav.post-controls {
     margin-right: auto;
     max-width:1100px;
     text-align:center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 #bottom-navbar-links a {
     color:#FFFFFF;
