--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -215,18 +215,18 @@ div.cooked img:not(.thumbnail) {
 }
 /********** Nav Footer **********/
 #bottom-navbar {
-    height:44px;
     background-color:#4BB234;
     width:100%;
     z-index: 1001;
 }
 div#bottom-navbar-links {
     width:99%;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:1100px;
+    text-align:center;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    max-width: 1100px;
-    text-align: center;
 }
 div#bottom-navbar-links a {
     color:#FFFFFF;
