--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -252,12 +252,12 @@ nav.post-controls {
     margin-right: auto;
     max-width:1100px;
     text-align:center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 #bottom-navbar-links a {
     color:#FFFFFF;
-    font-size: 26px;
+    font-size: 2rem;
     font-weight: lighter;
 }
 #bottom-navbar-links a:not(:first-child), #bottom-navbar-links a:not(:last-child) {
