--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -225,12 +225,12 @@ div#bottom-navbar-links {
     margin-right: auto;
     max-width:1100px;
     text-align:center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 div#bottom-navbar-links a {
     color:#FFFFFF;
-    font-size: 18px;
+    font-size: 2rem;
     font-weight: lighter;
 }
 #bottom-navbar-links a:not(:first-child), #bottom-navbar-links a:not(:last-child) {
