--- a/common/common.scss
+++ b/common/common.scss
@@ -712,3 +712,21 @@ category-boxes .category-box .category-box-inner .category-logo img {
     height: 40px;
     margin: 0 auto 1em auto;
 }
+
+.category-boxes {
+    display: grid;
+    grid-auto-flow: row;
+    grid-gap: 32px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    margin: 0 0 32px 0;
+}
+
+.category-boxes, .category-boxes-with-topics {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 100%;
+}
