--- a/common/common.scss
+++ b/common/common.scss
@@ -592,141 +592,141 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 
 
 // STEALING FROM FIGMA
-.category-boxes .category-box {
-    background-color: var(--secondary);
-    border-left-width: 0;
-    width: initial;
-    margin: 0 0;
-    max-height: 160px;
-    transition: all ease-out 0.2s;
-}
-
-.category-boxes .category-box {
-    width: 23%;
-    margin: 0 1% 1.5em 1%;
-}
-.category-boxes .category-box, .category-boxes-with-topics .category-box {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-content: flex-start;
-    box-sizing: border-box;
-    border-width: 0;
-    border-left-width: 6px;
-    border-style: solid;
-    border-color: var(--primary-low);
-}
-
-category-boxes .category-box .category-box-inner {
-    border: 0;
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 0fr 1fr 0fr;
-    column-gap: 48px;
-    padding: 0;
-}
-.category-boxes .category-box .category-box-inner {
-    padding: 1em;
-}
-.category-boxes .category-box-inner, .category-boxes-with-topics .category-box-inner {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    border-width: 2px;
-    border-left-width: 0;
-    border-style: solid;
-    border-color: var(--primary-low);
-}
-
-.category-boxes .category-box .category-box-inner .category-logo {
-    align-self: center;
-    background-color: var(--fg-low-contrast);
-    display: inline-block;
-    width: 160px;
-    height: 160px;
-}
-.category-boxes .category-box .category-box-inner .category-logo {
-    float: none;
-    margin: 0;
-}
-
-.category-boxes .category-box .category-box-inner .category-details {
-    align-self: center;
-}
-
-.category-boxes .category-box-heading {
-    margin-bottom: 16px;
-}
-
-.category-boxes .description {
-    color: var(--fg-low-contrast);
-    font-family: "Whyte",sans-serif;
-    font-size: 1em;
-    font-weight: 400;
-    line-height: 140%;
-    letter-spacing: 0.03em;
-    margin-bottom: 0;
-    max-height: 3em;
-    text-align: left;
-}
-.category-boxes .description {
-    margin-bottom: 1em;
-    text-align: center;
-    font-size: 1em;
-    color: var(--primary-med-or-secondary-high);
-    position: relative;
-    display: -webkit-box;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    word-wrap: break-word;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    pointer-events: none;
-}
-
-.category-boxes .category-box .parent-box-link:before, .category-boxes-with-topics .category-box .parent-box-link:before {
-    content: "";
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-category-boxes .category-box .category-box-inner .category-logo img {
-    height: 100%;
-    width: 100%;
-}
-.category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
-    --height: 40px;
-    height: var(--height);
-    width: calc(var(--height) * var(--aspect-ratio));
-    max-width: 100%;
-}
-.category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
-    display: block;
-    width: auto;
-    height: 40px;
-    margin: 0 auto 1em auto;
-}
-
-.category-boxes {
-    display: grid;
-    grid-auto-flow: row;
-    grid-gap: 32px;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    margin: 0 0 32px 0;
-}
-
-.category-boxes, .category-boxes-with-topics {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    width: 100%;
-}
+// .category-boxes .category-box {
+//     background-color: var(--secondary);
+//     border-left-width: 0;
+//     width: initial;
+//     margin: 0 0;
+//     max-height: 160px;
+//     transition: all ease-out 0.2s;
+// }
+// 
+// .category-boxes .category-box {
+//     width: 23%;
+//     margin: 0 1% 1.5em 1%;
+// }
+// .category-boxes .category-box, .category-boxes-with-topics .category-box {
+//     position: relative;
+//     display: flex;
+//     flex-direction: row;
+//     align-content: flex-start;
+//     box-sizing: border-box;
+//     border-width: 0;
+//     border-left-width: 6px;
+//     border-style: solid;
+//     border-color: var(--primary-low);
+// }
+// 
+// category-boxes .category-box .category-box-inner {
+//     border: 0;
+//     display: grid;
+//     grid-auto-flow: column;
+//     grid-template-columns: 0fr 1fr 0fr;
+//     column-gap: 48px;
+//     padding: 0;
+// }
+// .category-boxes .category-box .category-box-inner {
+//     padding: 1em;
+// }
+// .category-boxes .category-box-inner, .category-boxes-with-topics .category-box-inner {
+//     box-sizing: border-box;
+//     width: 100%;
+//     padding: 0;
+//     display: flex;
+//     flex-direction: column;
+//     border-width: 2px;
+//     border-left-width: 0;
+//     border-style: solid;
+//     border-color: var(--primary-low);
+// }
+// 
+// .category-boxes .category-box .category-box-inner .category-logo {
+//     align-self: center;
+//     background-color: var(--fg-low-contrast);
+//     display: inline-block;
+//     width: 160px;
+//     height: 160px;
+// }
+// .category-boxes .category-box .category-box-inner .category-logo {
+//     float: none;
+//     margin: 0;
+// }
+// 
+// .category-boxes .category-box .category-box-inner .category-details {
+//     align-self: center;
+// }
+// 
+// .category-boxes .category-box-heading {
+//     margin-bottom: 16px;
+// }
+// 
+// .category-boxes .description {
+//     color: var(--fg-low-contrast);
+//     font-family: "Whyte",sans-serif;
+//     font-size: 1em;
+//     font-weight: 400;
+//     line-height: 140%;
+//     letter-spacing: 0.03em;
+//     margin-bottom: 0;
+//     max-height: 3em;
+//     text-align: left;
+// }
+// .category-boxes .description {
+//     margin-bottom: 1em;
+//     text-align: center;
+//     font-size: 1em;
+//     color: var(--primary-med-or-secondary-high);
+//     position: relative;
+//     display: -webkit-box;
+//     overflow: hidden;
+//     text-overflow: ellipsis;
+//     word-wrap: break-word;
+//     -webkit-line-clamp: 4;
+//     -webkit-box-orient: vertical;
+//     pointer-events: none;
+// }
+// 
+// .category-boxes .category-box .parent-box-link:before, .category-boxes-with-topics .category-box .parent-box-link:before {
+//     content: "";
+//     position: absolute;
+//     z-index: 0;
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+// }
+// 
+// category-boxes .category-box .category-box-inner .category-logo img {
+//     height: 100%;
+//     width: 100%;
+// }
+// .category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
+//     --height: 40px;
+//     height: var(--height);
+//     width: calc(var(--height) * var(--aspect-ratio));
+//     max-width: 100%;
+// }
+// .category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
+//     display: block;
+//     width: auto;
+//     height: 40px;
+//     margin: 0 auto 1em auto;
+// }
+// 
+// .category-boxes {
+//     display: grid;
+//     grid-auto-flow: row;
+//     grid-gap: 32px;
+//     grid-template-columns: 1fr 1fr;
+//     grid-template-rows: 1fr;
+//     margin: 0 0 32px 0;
+// }
+// 
+// .category-boxes, .category-boxes-with-topics {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: flex-start;
+//     margin-top: 1em;
+//     margin-bottom: 1em;
+//     width: 100%;
+// }
