--- a/common/common.scss
+++ b/common/common.scss
@@ -589,7 +589,17 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
     color: #646464;
 }
 
+.category-boxes .category-box {
+    width: 46%;
+}
 
+.category-boxes .category-box-inner, .category-boxes-with-topics .category-box-inner {
+    flex-direction: row;
+}
+
+.category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
+  height: 150px
+}
 
 // STEALING FROM FIGMA
 // .category-boxes .category-box {
