--- a/common/common.scss
+++ b/common/common.scss
@@ -598,7 +598,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 }
 
 .category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
-  height: 150px
+  height: 150px;
 }
 
 // STEALING FROM FIGMA
