--- a/common/common.scss
+++ b/common/common.scss
@@ -595,10 +595,12 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 
 .category-boxes .category-box-inner, .category-boxes-with-topics .category-box-inner {
     flex-direction: row;
+    padding: 0;
 }
 
 .category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
   height: 150px;
+  margin: 0;
 }
 
 // STEALING FROM FIGMA
