adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -599,7 +599,8 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 }
 
 .category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
-  height: 150px;
+  height: 100%;
+  width: 100%;
   margin: 0;
 }
 
