adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -598,6 +598,10 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
     padding: 0;
 }
 
+.category-boxes .category-box .category-box-inner {
+    padding: 0;
+}
+
 .category-boxes .category-box .logo.aspect-image img, .category-boxes-with-topics .category-box .logo.aspect-image img {
   height: 100%;
   width: 100%;
