adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -608,6 +608,14 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   margin: 0;
 }
 
+.category-boxes h3 {
+    text-align: left;
+}
+
+.category-boxes .description {
+    text-align: left;
+}
+
 // STEALING FROM FIGMA
 // .category-boxes .category-box {
 //     background-color: var(--secondary);
