adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -628,6 +628,10 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   padding: 1rem;
 }
 
+.category-logo {
+  aspect-ratio: 1 / 1;
+}
+
 // STEALING FROM FIGMA
 // .category-boxes .category-box {
 //     background-color: var(--secondary);
