--- a/common/common.scss
+++ b/common/common.scss
@@ -632,6 +632,10 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   aspect-ratio: 1 / 1;
 }
 
+.category.category-box {
+  border: none;
+}
+
 // STEALING FROM FIGMA
 // .category-boxes .category-box {
 //     background-color: var(--secondary);
