adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -632,7 +632,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   aspect-ratio: 1 / 1;
 }
 
-.category.category-box {
+.category.category-box, .category-box-inner {
   border: none;
 }
 
