--- a/common/common.scss
+++ b/common/common.scss
@@ -630,6 +630,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 
 .category-logo {
   aspect-ratio: 1 / 1;
+  height: 100%;
 }
 
 .category.category-box {
