adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -612,6 +612,8 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 
 .category-boxes h3 {
     text-align: left;
+    margin-top: 0px;
+    margin-bottom: 1rem;
 }
 
 .category-boxes .description {
