adding icons to nav

--- a/common/common.scss
+++ b/common/common.scss
@@ -610,7 +610,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   margin: 0;
 }
 
-.category-boxes h3 {
+.category-details h3 {
     text-align: left;
     margin-top: 0px;
     margin-bottom: 1rem;
