--- a/common/common.scss
+++ b/common/common.scss
@@ -617,7 +617,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 }
 
 .categories-list .category h3 {
-  margin-bottom: 0px;
+  margin-bottom: 1rem;
 }
 
 .category-boxes .description {
