--- a/common/common.scss
+++ b/common/common.scss
@@ -591,7 +591,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 
 .category-boxes .category-box {
     width: 46%;
-    background-color: var(--primary-low);
+    background-color: var(--primary-very-low);
     height: 160px;
 }
 
