added header to above main controller

--- a/common/common.scss
+++ b/common/common.scss
@@ -650,3 +650,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 .category-details {
   align-self: center;
 }
+
+.welcome-message {
+  background-color: var(--tertiary-low);
+}
