--- a/common/common.scss
+++ b/common/common.scss
@@ -662,4 +662,9 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   h1 {
     font-weight: bolder;
   }
+  
+  p {
+    font-size: 16px;
+    font-weight: bold;
+  }
 }
