--- a/common/common.scss
+++ b/common/common.scss
@@ -658,6 +658,9 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 .welcome-message-container {
   padding: 3rem;
   margin-bottom: 1rem;
+  display: flex;
+  align-content: center;
+  height: 100px;
   
   h1 {
     font-weight: bolder;
@@ -669,6 +672,10 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   }
 }
 
+.image-container {
+  margin-right: 3rem;
+}
+
 .welcome-image {
-  height: 84px;
+  height: 100px;
 }
