--- a/common/common.scss
+++ b/common/common.scss
@@ -676,6 +676,18 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   margin-right: 3rem;
 }
 
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
 .welcome-image {
+  display: flex;
   height: 100px;
+  align-self: center;
+  
+  img {
+    50px;
+  }
 }
