--- a/common/common.scss
+++ b/common/common.scss
@@ -688,6 +688,6 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
   align-self: center;
   
   img {
-    50px;
+    height: 50px;
   }
 }
