added header to above main controller

--- a/common/common.scss
+++ b/common/common.scss
@@ -685,6 +685,6 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 }
 
 .welcome-image {
-  height: 50px;
+  height: 100%;
   align-self: center;
 }
