--- a/common/common.scss
+++ b/common/common.scss
@@ -670,6 +670,10 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
     font-size: 16px;
     font-weight: bold;
   }
+  
+  button {
+    width: 70px;
+  }
 }
 
 .header-container {
