--- a/common/common.scss
+++ b/common/common.scss
@@ -604,7 +604,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
     padding: 0;
 }
 
-.category-box-inner:hover{
+.category-box:hover{
   box-shadow: -8px 8px 0 0 var(--tertiary);
   transform: translate(8px, -8px);
 }
