added header to above main controller

--- a/common/common.scss
+++ b/common/common.scss
@@ -602,6 +602,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 
 .category-boxes .category-box .category-box-inner {
     padding: 0;
+    transition: all ease-out 0.2s;
 }
 
 .category-box:hover{
