fixing mobile view

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -322,10 +322,10 @@ nav.post-controls {
 .image-container {
   margin-right: 3rem;
   display: flex;
-  height: 100px;
+  width: 150px;
 }
 
 .welcome-image {
-  height: 100%;
+  width: 100%;
   align-self: center;
 }
