--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -260,3 +260,45 @@ div#bottom-navbar-links a {
 #navbar-center a {
     padding-left: 20px;
 }
+
+.welcome-message {
+  background-color: var(--tertiary-low);
+}
+
+.welcome-message-container {
+  padding: 3rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-content: center;
+  
+  h1 {
+    font-weight: bolder;
+  }
+  
+  p {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  button {
+    width: 70px;
+  }
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 100%;
+}
+
+.image-container {
+  margin-right: 3rem;
+  display: flex;
+  width: 100%;
+}
+
+.welcome-image {
+  width: 100%;
+  align-self: center;
+}
