fixing mobile view

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -298,6 +298,7 @@ nav.post-controls {
   margin-bottom: 1rem;
   display: flex;
   align-content: center;
+  flex-direction: row;
   
   h1 {
     font-weight: bolder;
