--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -269,6 +269,7 @@ div#bottom-navbar-links a {
   padding: 3rem;
   margin-bottom: 1rem;
   display: flex;
+  flex-direction: column;
   align-content: center;
   
   h1 {
