--- a/common/common.scss
+++ b/common/common.scss
@@ -647,6 +647,10 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 .category-logo {
   aspect-ratio: 1 / 1;
   height: 100%;
+
+  img {
+    width: 100%;
+  }
 }
 
 .category.category-box {
