change button color

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -340,4 +340,8 @@ nav.post-controls {
 #create-topic{
   background-color: var(--quaternary);
   color: var(--secondary);
+
+  .d-icon{
+    color: var(--secondary);
+  }
 }
