--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -218,7 +218,9 @@ nav.post-controls {
 .d-header #site-logo {
     height: 3.8em;
 }
-
+.d-header .title a, .d-header .title a:visited{
+  color: white;
+}
 .d-header .headerLink a{
   color: white;
 }
