--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -183,13 +183,13 @@ div.cooked img:not(.thumbnail) {
 }
 
 .d-header {
-    background-color:#F0F0F0;
+  background-color:#18113c;
 }
 .d-header #mobile-logo {
     height: 3.8em;
 }
 .d-header-icons .d-icon {
-    color: black;
+    color: white;
 }
 /*On scroll, change the post title to white so it is readable in the banner.*/
 .extra-info-wrapper .topic-link {
