--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -185,7 +185,7 @@ div.cooked img:not(.thumbnail) {
 .d-header {
   background-color:#18113c;
 }
-.d-header #mobile-logo {
+.d-header #logo-mobile {
     height: 3.8em;
 }
 .d-header-icons .d-icon {
