header topic color

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -214,6 +214,7 @@ nav.post-controls {
 }
 .d-header #site-logo {
     height: 3.8em;
+    max-height: 3.8em;
 }
 .d-header .title a, .d-header .title a:visited{
   color: white;
