change footer color

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -250,7 +250,7 @@ nav.post-controls {
 }
 /********** Nav Footer **********/
 #bottom-navbar {
-    background-color:#4BB234;
+    background-color: #18113c;
     width:100%;
     z-index: 1001;
 }
