change footer color

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -238,7 +238,7 @@ nav.post-controls {
   color: var(--secondary)
 }
 .d-footer {
-    background-color:#2C3E4F;
+    background-color: #18113c;
     line-height: 64px;
     height: 64px;
     text-align:center;
