--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -200,7 +200,7 @@ div.cooked img:not(.thumbnail) {
     color: var(--secondary)
 }
 .d-footer {
-    background-color:#2C3E4F;
+    background-color: #18113c;
     padding: 1rem;
     text-align:center;
 }
