change chat icon to white and grey on hover to match search

--- a/common/chat.scss
+++ b/common/chat.scss
@@ -1,7 +1,3 @@
 .header-dropdown-toggle.chat-header-icon a.icon.active .d-icon-comment {
-  color: var(--primary);
-}
-
-.header-dropdown-toggle.chat-header-icon a.icon.active .d-icon-comment {
-  color: white;
+  color: #25AAE2;
 }
