remove search border

--- a/common/common.scss
+++ b/common/common.scss
@@ -666,11 +666,11 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
 }
 
 .search-widget .search-icon {
-  border: 1px solid var(--primary-medium);
+  border: 0;
   border-radius: 0;
 
   .d-icon-search {
-    height: 1.22em;
-    width: 1.22em;
+    height: 1.20em;
+    width: 1.20em;
   }
 }
