Move links to more closer match position on main site

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -51,6 +51,9 @@ img.avatar {
   .icons .flagged-posts {
     right: 85px;
   }
+  .before-header-panel-outlet {
+    margin: auto;
+  }
 }
 
 .title-wrapper {
