--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -22,7 +22,7 @@ img.avatar {
 .d-header {
   height: 70px;
   //background: rgba(var(--gf-header-bg-rgb), 0.92);
-  background-image: linear-gradient(to right, $dark, rgba(#351169, 1));
+  background-image: linear-gradient(to right, rgba(#221065, 1), rgba(#351169, 1));
   box-shadow: 0 3px 3px rgba(100, 100, 100, 0.13);
   .panel {
     padding: 6px 0 0 0;
