Change footer backgron colour

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -256,7 +256,7 @@ nav.post-controls {
 }
 /********** Nav Footer **********/
 #bottom-navbar {
-    background-color: #18113c;
+    background-color: #221065;
     width:100%;
     z-index: 1001;
 }
