--- a/common/common.scss
+++ b/common/common.scss
@@ -151,11 +151,27 @@ header.d-header {
   }
 }
 
+.d-header {
+  background-image: linear-gradient(to right, rgba(#221065, 1), rgba(#351169, 1));
+}
+
 .d-header-icons .icon:hover {
   background: $tertiary-low;
   .d-icon {
     color: $tertiary;
   }
+}
+
+.d-header .headerLink a {
+  color: #fff;
+}
+
+.d-header .headerLink a {
+  color: white;
+}
+
+.d-header-icons .d-icon {
+  color: white;
 }
 
 .badge-wrapper.box {
