Make question solution reminder dismissable
Move it to the front of the date scroller

--- a/common/common.scss
+++ b/common/common.scss
@@ -686,3 +686,7 @@ nav.post-controls .actions .double-button button.has-like .d-icon {
     width: 1.20em;
   }
 }
+
+.topic-navigation-outlet {
+  z-index: 99999;
+}
