Add hover colour to header links

--- a/common/common.scss
+++ b/common/common.scss
@@ -166,6 +166,10 @@ header.d-header {
   color: white;
 }
 
+.d-header .headerLink a:hover {
+  color: #ff33cc;
+}
+
 .d-header-icons .d-icon {
   color: white;
 }
